# confabulator-magenta-rt

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONFABULATOR.md  CONFABULATOR_BANKS.md  LICENSE_HEADER_SH.txt  MODEL.md  README.md  pyproject.toml
.github/workflows/: cli_tests.yml  docs.yml
core/include/magentart/: mlx_engine.h  realtime_runner.h
core/src/: mlx_engine.cpp  numpy_random_state_test.cpp
core/src/benchmark/: CMakeLists.txt  benchmark_mlxfn.cpp
docs/: README.md  agent_performance.md  benchmark.md  conf.py  exporting.md  models.md  requirements.txt  testing.md
docs/apps/: audio_unit_plugin.md  collider.md  distributing.md  index.md  jam_app.md  standalone_app.md
examples/: README.md  package-lock.json
examples/collider/: CMakeLists.txt  ColliderApp.mm  ColliderAppController.h  ColliderAppController.mm  ColliderInfo.plist.in
examples/collider/.agents/rules/: collider_interactions.md
examples/collider/ui/: index.html  package.json
examples/collider/ui/src/: App.tsx  index.css
examples/common/objc/: MagentaSettings.h  MagentaSettings.mm
examples/hello_mrt2/: CMakeLists.txt  README.md  main.cpp
examples/jam/: CMakeLists.txt  JamApp.mm  JamAppController.h  JamAppController.mm  JamInfo.plist.in
examples/jam/ui/: index.html  package-lock.json  package.json  postbuild.js
examples/jam/ui/config/: vite.config.ts
examples/jam/ui/src/: App.tsx  JamSlider.tsx  JamSliderElastic.tsx  PianoKeyboard.tsx  index.css
examples/max/: CMakeLists.txt  INSTALL.md  Info.plist.in  README.md  mrt2~.maxhelp  mrt_tilde.mm
examples/mrt2/auv3/: .gitignore  CMakeLists.txt  Entitlements.plist  FrameworkInfo.plist.in  HostInfo.plist.in  INSTALL.md  Info.plist.in  MagentaRT_AUHostApp.mm  MagentaRT_AudioUnit.h  MagentaRT_AudioUnit.mm  README.md
examples/mrt2/react_ui/: index.html  package.json  postbuild.js  tsconfig.json
examples/mrt2/react_ui/config/: tailwind.config.js  tsconfig.shared.json  vite.config.ts
examples/mrt2/react_ui/src/: App.tsx  index.css  main.tsx
examples/mrt2/react_ui/src/components/: MagentaSlider.css  MagentaSlider.tsx  PianoKeyboard.tsx  PromptRow.tsx
examples/mrt2/standalone/: CMakeLists.txt  MagentaRTAppController.h  MagentaRTAppController.mm  MagentaRTStandaloneApp.mm  StandaloneInfo.plist.in
examples/pd/: CMakeLists.txt  README.md  mrt2~-help.pd  mrt_tilde.mm
examples/sc/: CMakeLists.txt  MRT2.mm  MRT2.sc  README.md  example.scd
examples/scripts/: README.md  build-all.sh  clear-defaults.sh  dev-all.sh  notarize-all.sh  zip-all.sh
magenta_rt/: __init__.py
magenta_rt/mlx/: system.py
notebooks/: python_inference_demo.ipynb
scripts/: bench_show.py  bench_track.py  bulk_generate.py  bulk_generate.sh  compare_mlxfn.py  compare_python_n_cpp.py  confabulator_agent_client.py  confabulator_performer_agent.py  confabulator_replay_agent_trace.py  generate_test_reference.py  latency_benchmark.sh  package_confabulator_dmg.sh  package_confabulator_pkg.sh
tests/: test_bitlevel_parity.py  test_gptq.py  test_musiccoca.py  test_prefill_correctness.py
